[package]
name = "compare-olap-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4.24"
datafusion = "22"
# duckdb = { version = "0.7.1", features = ["bundled", "chrono"] }
# extensions-full feature is not released yet
duckdb = { git = "https://github.com/wangfenjin/duckdb-rs.git", rev = "80a492c826ccd8b106950966f0ec975f3d90d0d3", features = ["bundled", "extensions-full", "chrono"] }
polars = { version = "0.28.0", features = ["dtype-datetime", "dtype-struct", "lazy", "streaming", "parquet", "performant"] }
rand = "0.8.5"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
serde_json = "1.0.96"
tokio = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "ansi"], default-features = false }
uuid = { version = "1.3.1", features = ["v4"] }

[[bin]]
name = "gen_data"
path = "src/gen_data.rs"

[[bin]]
name = "gen_data_normalized"
path = "src/gen_data_normalized.rs"

[[bin]]
name = "queries"
path = "src/queries.rs"
